--- a/SouthgateMobileVillage.csproj
+++ b/SouthgateMobileVillage.csproj
@@ -175,15 +175,21 @@
     <Compile Include="Controllers\Home4SaleController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DAL\ResidentContext.cs" />
+    <Compile Include="DAL\ResidentInitalizer.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Graphic.cs" />
+    <Compile Include="Models\Home.cs" />
     <Compile Include="Models\Home4Rent.cs" />
     <Compile Include="Models\Home4Sale.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Lot.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Resident.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
