--- a/bin/SouthgateMobileVillage.dll.config
+++ b/bin/SouthgateMobileVillage.dll.config
@@ -11,6 +11,11 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SouthgateMobileVillage-20200130015000.mdf;Initial Catalog=aspnet-SouthgateMobileVillage-20200130015000;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <connectionStrings>
+    <add name="ResidentContext"
+    connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SouthGateMobileVillage1;Integrated Security=SSPI;"
+    providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -76,6 +81,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="SouthgateMobileVillage.DAL.ResidentContext, SouthgateMobileVillage">
+        <databaseInitializer type="SouthgateMobileVillage.DAL.ResidentInitializer, SouthgateMobileVillage" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
