about us page updated

--- a/SouthgateMobileVillage.csproj
+++ b/SouthgateMobileVillage.csproj
@@ -207,6 +207,7 @@
     <Content Include="Content\images\mainRd.jpg" />
     <Content Include="Content\images\office1.jpg" />
     <Content Include="Content\images\park.jpg" />
+    <Content Include="Content\images\PJ1.jpg" />
     <Content Include="Content\images\RTrailor1.jpg" />
     <Content Include="Content\images\RTrailor2.jpg" />
     <Content Include="Content\images\RTrailor3.jpg" />
