--- a/bin/SouthgateMobileVillage.dll.config
+++ b/bin/SouthgateMobileVillage.dll.config
@@ -10,9 +10,7 @@
   </configSections>
   
   <connectionStrings>
-    <add name="ResidentContext"
-    connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SouthGateMobileVillage1;Integrated Security=SSPI;"
-    providerName="System.Data.SqlClient"/>
+    <add name="ResidentContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SouthGateMobileVillage1;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
